; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_rufus.c_SetClusterSizeLabels.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_rufus.c_SetClusterSizeLabels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ClusterSizeLabel = common dso_local global i32* null, align 8
@MSG_029 = common dso_local global i32 0, align 4
@MSG_026 = common dso_local global i32 0, align 4
@MAX_CLUSTER_SIZES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"%d %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @SetClusterSizeLabels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetClusterSizeLabels() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32*, i32** @ClusterSizeLabel, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @MSG_029, align 4
  %8 = call i32 @lmprintf(i32 %7)
  %9 = sext i32 %8 to i64
  %10 = inttoptr i64 %9 to i8*
  %11 = call i32 (i32, i32, i8*, ...) @safe_sprintf(i32 %6, i32 64, i8* %10)
  store i32 512, i32* %1, align 4
  store i32 1, i32* %2, align 4
  %12 = load i32, i32* @MSG_026, align 4
  store i32 %12, i32* %3, align 4
  br label %13

13:                                               ; preds = %35, %0
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* @MAX_CLUSTER_SIZES, align 4
  %16 = icmp ult i32 %14, %15
  br i1 %16, label %17, label %40

17:                                               ; preds = %13
  %18 = load i32, i32* %1, align 4
  %19 = icmp ugt i32 %18, 8192
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i32, i32* %1, align 4
  %22 = udiv i32 %21, 1024
  store i32 %22, i32* %1, align 4
  %23 = load i32, i32* %3, align 4
  %24 = add i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %20, %17
  %26 = load i32*, i32** @ClusterSizeLabel, align 8
  %27 = load i32, i32* %2, align 4
  %28 = zext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %1, align 4
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @lmprintf(i32 %32)
  %34 = call i32 (i32, i32, i8*, ...) @safe_sprintf(i32 %30, i32 64, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %31, i32 %33)
  br label %35

35:                                               ; preds = %25
  %36 = load i32, i32* %1, align 4
  %37 = shl i32 %36, 1
  store i32 %37, i32* %1, align 4
  %38 = load i32, i32* %2, align 4
  %39 = add i32 %38, 1
  store i32 %39, i32* %2, align 4
  br label %13

40:                                               ; preds = %13
  ret void
}

declare dso_local i32 @safe_sprintf(i32, i32, i8*, ...) #1

declare dso_local i32 @lmprintf(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
